--- a/style1.css
+++ b/style1.css
@@ -2,7 +2,7 @@
     width: 100%;
     height:200px;
     background-color: blueviolet;
-    margin bottom: 10px;
+    margin-bottom: 10px;
     }
 .sidebar{
     width: 20%;
