--- a/Assignments/css/assignment1.css
+++ b/Assignments/css/assignment1.css
@@ -1,44 +1,65 @@
-*{
+* {
     margin: 0%;
     padding: 0%;
-    font-size: 40px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
     text-align: center;
+    font-size: 40px;
 }
 .grid-container{
-    width: 100%;
-    height: 100vh;
-    background-color: aqua;
+    width: 80%;
+    height: 80vh;
+    background-color: red;
     display: grid;
-    gap: 10px;
+    gap: 5px;
+    margin: 5% 10%;
     grid-template-areas:
     "header header header header"
-    "menu main main ad1" 
+    "menu main main ad1"
     "menu main main ad1"
     "ad2 main main ad1"
     "footer footer footer footer";
 }
 .grid-item{
-    background-color: slateblue;
-    min-height: 100px;
+    border: 1px solid red;
+    
 }
 .item1{
-    grid-area: Header;
+    grid-area: header;
+    background-color: blue;
 }
 .item2{
-    grid-area: Menu;
+    grid-area: menu;
+    background-color: slateblue;
 }
 .item3{
-    grid-area: Ad2;
+    grid-area: ad2;
+    background-color: slateblue;
 }
 .item4{
-    grid-area: Main;
+    grid-area: main;
+    background-color: slateblue;
 }
 .item5{
-    grid-area: Ad1;
+    grid-area: ad1;
+    background-color: slateblue;
 }
 .item6{
-    grid-area: Footer;
+    grid-area: footer;
+    background-color: blue;
 }
+
+        
+    
+
+
+
+
+
+
+    
+
+    
+
+
+
 
 
